fix screen width overflows the max-width

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     display: flex;
+    box-sizing: border-box;
 }
 
 #colorPalette {
@@ -39,6 +40,7 @@
     max-width: 600px;
     margin-bottom: 10px;
     padding: 10px;
+    box-sizing: border-box;
     /* height: 40px; */
 }
 
@@ -99,9 +101,10 @@
     color: #ffffff;
     background: linear-gradient(to right, #52A0FD 0%, #00e2fa 80%, #00e2fa 100%);
 } */
+
 app-drop-field {
     max-width: 600px;
-    width: 100%;
+    width: 95%;
+    text-align: center;
     margin-top: 20px;
-    transition: height 1s ease;
 }
